--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -1,6 +1,21 @@
 <section class="section summary-section">
-<h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
+<h2 class="section-title"><i class="fa fa-key"></i> Key Strengths</h2>
 <div class="summary">
-    <p>Summarise your career here lorem ipsum dolor sit amet, consectetuer adipiscing elit. You can <a href="#" target="_blank">download this free resume/CV template here</a>. Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.</p>
+    <div class="item">
+        <span class="project-title"><i class="fa fa-line-chart"></i> <strong>Delivering Business Value</strong> - <span class="project-tagline">
+        I strongly believe in delivering business value through IT and clearly differientiating between necessity and nice to have.
+        </span>
+        </p>
+        <p>
+        <span class="project-title"><i class="fa fa-bullseye"></i> <strong>Agility</strong> - <span class="project-tagline">
+        True agility in approach, not just blind obedience to whatever flavour of 'Agile' is currently trendy.
+        </span>
+        </p>
+        <p>
+        <span class="project-title"><i class="fa fa-puzzle-piece"></i> <strong>Complete view</strong> - <span class="project-tagline">
+        I strive to understand how everything fits together in both business and all IT aspects.
+        </span>
+        </p>
+    </div><!--//item-->
 </div><!--//summary-->
 </section><!--//section-->
