--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -5,26 +5,35 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Lead Developer</h3>
-                            <div class="time">2015 - Present</div>
+                            <div class="time">Feb 2016 - Present</div>
                         </div><!--//upper-row-->
-                        <div class="company">Startup Hubs, San Francisco</div>
+                        <div class="company">so-sure, London</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.</p>  
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
+                        <p>Managed dev team, acting CTO</p>
+                        <ul>
+                            <li>Architected and developed api and website to sell mobile phone insurance</li>
+                            <li>Analyized and adjusted policy wording and business processes to ensure consistency and benefit to both users and business</li>
+                            <li>Evaluated, recommended, and managed vendors for payment gateways, anti-fraud and other technical systems.</li>  
                     </div><!--//details-->
                 </div><!--//item-->
                 
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Senior Software Engineer</h3>
-                            <div class="time">2014 - 2015</div>
+                            <h3 class="job-title">Senior Backend Engineer</h3>
+                            <div class="time">Sept 2012 - Feb 2016</div>
                         </div><!--//upper-row-->
-                        <div class="company">Google, London</div>
+                        <div class="company">PeerJ, London</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>  
+                        <p>Managed DevOps team</p>
+                        <ul>
+                            <li>Ops responsibility for peerj.com site that achieved 99.99% uptime during a 1 year period.</li>
+                            <li>Ensured load balancing and automatic failover across all system components</li>
+                            <li>Setup article level analytics in GA and later migrated to AWS EMR/Hive for improved accuracy</li>
+                            <li>Developed a prototype client/server file sharing service</li>
+                        </ul> 
                         
                     </div><!--//details-->
                 </div><!--//item-->
@@ -32,14 +41,39 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">UI Developer</h3>
-                            <div class="time">2012 - 2014</div>
+                            <h3 class="job-title">CTO</h3>
+                            <div class="time">Aug 2010 - Aug 2011</div>
                         </div><!--//upper-row-->
-                        <div class="company">Amazon, London</div>
+                        <div class="company">Tangaro, London</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>  
+                        <p>Managed dev team</p>
+                        <ul>
+                            <li>Architected and implemented clipDO.com including api, bookmarklets, and brower extensions.  </li>
+                            <li>Created an iPad data analytsis/reporting app for Telecom client.</li>
+                        </ul>
                     </div><!--//details-->
                 </div><!--//item-->
                 
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Consultant</h3>
+                            <div class="time">Feb 2008 - Aug 2011</div>
+                        </div><!--//upper-row-->
+                        <div class="company">URG Systems, London</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>IT Consultancy focued on Media and Telecomms clients</p>
+                        <ul>
+                            <li>Architected and implemented sim reseller commission payment system.  </li>
+                            <li>Implemented Amex B2B FX Exchange website.</li>
+                            <li>Implemented several new modules for Heinz Baby UK website with custom backend Umbraco Integration</li>
+                            <li>Architected and partially implemented catalogue system for Time-Warner.</li>
+                            <li>Implemented powershell cmdlets for Citrix XenServer administration.</li>
+                            <li>Developed a protoype client to track datacard data usage.</li>
+                        </ul>
+                    </div><!--//details-->
+                </div><!--//item-->
+
             </section><!--//section-->
