--- a/_includes/language.html
+++ b/_includes/language.html
@@ -1,8 +1,52 @@
 <div class="languages-container container-block">
-<h2 class="container-block-title">Languages</h2>
+<h2 class="container-block-title"><i class="fa fa-cubes"></i> Technologies</h2>
+<p>Selected technologies used previously in production</p>
 <ul class="list-unstyled interests-list">
-<li>English <span class="lang-desc">(Native)</span></li>
-<li>French <span class="lang-desc">(Professional)</span></li>
-<li>Spanish <span class="lang-desc">(Professional)</span></li>
+<li><i class="fa fa-code"></i> Languages
+	<ul class="list-unstyled tech-list">
+		<li>Javascript</li>
+		<li>PHP</li>
+		<li>Python</li>
+		<li>Object C</li>
+		<li>C#</li>
+	</ul>
+</li>
+<li><i class="fa fa-database"></i> DBs / NoSQL
+	<ul class="list-unstyled tech-list">
+		<li>MySQL</li>
+		<li>MSSQL</li>
+		<li>Redis</li>
+		<li>ElasticSearch</li>
+		<li>MongoDB</li>
+		<li>EMR (Hadoop)</li>
+		<li>DynamoDB</li>
+	</ul>
+</li>
+<li><i class="fa fa-gear"></i> DevOps
+	<ul class="list-unstyled tech-list">
+		<li>Nagios</li>
+		<li>Sensu</li>
+		<li>Munin</li>
+		<li>Monit</li>
+		<li>Jenkins</li>
+		<li>Puppet</li>
+		<li>Ansbile</li>
+		<li>Packer</li>
+		<li>Terraform</li>
+		<li>Varnish</li>
+		<li>Apache</li>
+		<li>Nginx</li>
+		<li>HAProxy</li>
+	</ul>
+</li>
+<li><i class="fa fa-cloud"></i> Servers/Cloud
+	<ul class="list-unstyled tech-list">
+		<li>Linux (Ubuntu/Centos)</li>
+		<li>Windows</li>
+		<li>AWS</li>
+		<li>Scalr</li>
+		<li>Rackspace</li>
+	</ul>
+</li>
 </ul>
 </div><!--//interests-->
