--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@ layout: compress
 
 <body>
     <div class="wrapper">
+    	{% include profile.html %}
         {% include sidebar.html %}
         
         <div class="main-wrapper">
