--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,18 +1,9 @@
 <div class="interests-container container-block">
-<h2 class="container-block-title">Interests</h2>
+<h2 class="container-block-title"><i class="fa fa-heart"></i> Interests</h2>
 <ul class="list-unstyled interests-list">
-<li>Climbing</li>
-<li>Snowboarding</li>
-<li>Cooking</li>
+<li><i class="fa fa-bicycle"></i> Cycling</li>
+<li><i class="fa fa-train"></i> Travel</li>
 </ul>
 </div><!--//interests-->
 
 
-
-
-<div class="remove-container container-block">
-<h2 class="container-block-title">About Theme</h2>
-<ul class="list-unstyled interests-list">
-<a href="http://blog.webjeda.com/jekyll-themes/online-cv/"><li>How to use?</li></a>
-</ul>
-</div><!--//interests-->
