--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,23 +1,14 @@
 <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
-                <div class="intro">
-                    <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
-                </div><!--//intro-->
                 <div class="item">
-                    <span class="project-title"><a href="#hook">Velocity</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote, market and sell their products.</span>
+                    <span class="project-title"><a href="http://github.com/PeerJ/Memon">Memon</a></span> - <span class="project-tagline">Script
+                    event monitoring using Python, SQS, and DynamoDB with running costs of around $1/month.</span>
                     
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title"><a href="#" target="_blank">DevStudio</a></span> - 
-                    <span class="project-tagline">A responsive website template designed to help web developers/designers market their services. </span>
-                </div><!--//item-->
-                <div class="item">
-                    <span class="project-title"><a href="#" target="_blank">Tempo</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote their products or services and to attract users &amp; investors</span>
-                </div><!--//item-->
-                <div class="item">
-                    <span class="project-title"><a href="#" target="_blank">Atom</a></span> - <span class="project-tagline">A comprehensive website template solution for startups/developers to market their mobile apps. </span>
-                </div><!--//item-->
-                <div class="item">
-                    <span class="project-title"><a href="#" target="_blank">Delta</a></span> - <span class="project-tagline">A responsive Bootstrap one page theme designed to help app developers promote their mobile apps</span>
+                    <span class="project-title"><a href="https://zymge.com">Zymge</a></span> - <span class="project-tagline">
+                    Twitter socal app using NodeJS, Lambda, and MongoDb.
+                    </span>
+                    
                 </div><!--//item-->
             </section><!--//section-->
