--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -52,22 +52,19 @@ p {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 .sidebar-wrapper {
-  background: #42A8C0;
   position: absolute;
   right: 0;
   width: 240px;
-  height: 100%;
   min-height: 800px;
-  color: #fff;
+  background: #fff;
 }
 .sidebar-wrapper a {
-  color: #fff;
+  color: #42A8C0;
 }
-.sidebar-wrapper .profile-container {
-  padding: 30px;
-  background: rgba(0, 0, 0, 0.2);
+.profile-container {
+  background: #fff;
+  padding-top: 30px;
   text-align: center;
-  color: #fff;
 }
 .sidebar-wrapper .name {
   font-size: 32px;
@@ -85,25 +82,27 @@ p {
 .sidebar-wrapper .profile {
   margin-bottom: 15px;
 }
-.sidebar-wrapper .contact-list .fa {
+.contact-list .fa {
   margin-right: 5px;
   font-size: 18px;
   vertical-align: middle;
 }
-.sidebar-wrapper .contact-list li {
-  margin-bottom: 15px;
+.contact-list li {
+  display: inline;
+  margin-right: 20px;
 }
-.sidebar-wrapper .contact-list li:last-child {
+.contact-list li:last-child {
   margin-bottom: 0;
 }
-.sidebar-wrapper .contact-list .email .fa {
+.contact-list .email .fa {
   font-size: 14px;
 }
-.sidebar-wrapper .container-block {
-  padding: 30px;
+.container-block {
+  padding: 20px;
 }
-.sidebar-wrapper .container-block-title {
+.container-block-title {
   text-transform: uppercase;
+  border-bottom: solid;
   font-size: 16px;
   font-weight: 700;
   margin-top: 0;
@@ -132,7 +131,6 @@ p {
   margin-bottom: 0px;
 }
 .sidebar-wrapper .languages-container .lang-desc {
-  color: rgba(255, 255, 255, 0.6);
 }
 .sidebar-wrapper .languages-list {
   margin-bottom: 0;
@@ -154,14 +152,15 @@ p {
 }
 .main-wrapper {
   background: #fff;
-  padding: 60px;
+  padding: 20px;
   padding-right: 300px;
 }
 .main-wrapper .section-title {
   text-transform: uppercase;
   font-size: 20px;
   font-weight: 500;
-  color: #2d7788;
+  color: #000;
+  border-bottom: solid;
   position: relative;
   margin-top: 0;
   margin-bottom: 20px;
@@ -171,16 +170,9 @@ p {
   height: 30px;
   margin-right: 8px;
   display: inline-block;
-  color: #fff;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
-  border-radius: 50%;
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
-  background: #2d7788;
   text-align: center;
   padding-top: 8px;
   font-size: 16px;
@@ -226,6 +218,13 @@ p {
 }
 .main-wrapper .projects-section .item {
   margin-bottom: 15px;
+}
+.tech-list li {
+  display: inline-block;
+  padding: 5px;
+  margin-right: 5px;
+  margin-bottom: 10px;
+  border: 1px solid;
 }
 .skillset .item {
   margin-bottom: 15px;
